fixing dropdown spacing

--- a/allPages.css
+++ b/allPages.css
@@ -15,9 +15,15 @@ nav a {
     color: rgb(17, 16, 16);
     text-decoration: none;
     font-weight: 500;
-    margin-left: 35px;
     transition: .3s;
+    margin-left: 35px;
 }
+@media (max-width: 650px) {
+    .nav a {
+        margin-left: 0;
+    }
+}
+
 section {
     min-height: 100vh;
     width: 100vw;
